# portfolio_optimizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  frontier.py  load_data.py  optimizer.py  pyproject.toml  requirements.txt
data/: BAJAJ-AUTO.NS.csv  HDFCBANK.NS.csv  INFY.NS.csv  RELIANCE.NS.csv  TATAMOTORS.NS.csv  TCS.NS.csv
docs/: CNAME  conf.py
docs/_build/doctrees/: index.doctree  portfolio_optimizer.doctree
docs/_build/html/: index.html  modules.html  search.html  searchindex.js
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  portfolio_optimizer.doctree
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  portfolio_optimizer.html  py-modindex.html  search.html  searchindex.js
docs/html/_static/: documentation_options.js
documentation/: conf.py  modules.rst
documentation/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  portfolio_optimizer.doctree
documentation/_build/html/: genindex.html  index.html  modules.html  objects.inv  portfolio_optimizer.html  py-modindex.html  searchindex.js
documentation/_build/html/_sources/: index.rst.txt  portfolio_optimizer.rst.txt
documentation/_build/html/_static/: documentation_options.js
portfolio_optimizer/: __init__.py  frontier.py  load_data.py  optimizer.py  portfolio.py  style.py
tests/: test_portfolio.py
